Simple test script
Fixes #15

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,33 @@
 .editorconfig
+**/.DS_Store
+**/.deps
+**/.libs
+**/.dirstamp
+**/*.lo
+**/*.o
+aclocal.m4
+compile
+config.guess
+config.log
+config.status
+config.sub
+configure
+depcomp
+install-sh
+librdata.la
+libtool
+ltmain.sh
+Makefile
+Makefile.in
+missing
+readstat
+test-driver
+autom4te.cache/*
+output.*
+test-suite.log
+readEx
+writeEx
+fuzz_rdata
+test_rdata
+test_rdata.log
+test_rdata.trs
