--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,7 +22,7 @@ install:
       }
       else
       {
-        c:\cygwin64\setup-x86_64.exe -qnNdO -s http://cygwin.mirror.constant.com -l C:/cygwin64/var/cache/setup -P libbz2-devel -P zlib-devel -P liblzma-devel
+        c:\cygwin64\setup-x86_64.exe -qnNdO -s http://cygwin.mirror.constant.com -l C:/cygwin64/var/cache/setup -P libbz2-devel -P zlib-devel -P liblzma-devel -P libiconv-devel
       }
 
 build_script:
