--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,6 @@ platform: x64
 
 environment:
   matrix:
-  - TOOLCHAIN: "msys2"
   - TOOLCHAIN: "cygwin"
 
 branches:
@@ -16,50 +15,15 @@ branches:
 skip_tags: true
 
 install:
-  - ps: |
-      if ($env:TOOLCHAIN -eq "msys2")
-      {
-      }
-      else
-      {
-        c:\cygwin64\setup-x86_64.exe -qnNdO -s http://cygwin.mirror.constant.com -l C:/cygwin64/var/cache/setup -P libbz2-devel -P zlib-devel -P liblzma-devel -P libiconv-devel
-      }
+  - C:\cygwin64\setup-x86_64.exe -qnNdO -s http://cygwin.mirror.constant.com -l C:/cygwin64/var/cache/setup -P libbz2-devel -P zlib-devel -P liblzma-devel -P libiconv-devel
 
 build_script:
-  - ps: |
-      if ($env:TOOLCHAIN -eq "msys2")
-      {
-        $env:MSYSTEM="MINGW64"
-        C:\msys64\usr\bin\bash -l -c "cd /c/projects/librdata && ./autogen.sh"
-        C:\msys64\usr\bin\bash -l -c "cd /c/projects/librdata && ./configure"
-        C:\msys64\usr\bin\bash -l -c "cd /c/projects/librdata && make"
-      }
-      else
-      {
-        C:\cygwin64\bin\sh -lc "cd /cygdrive/c/projects/librdata && ./autogen.sh"
-        C:\cygwin64\bin\sh -lc "cd /cygdrive/c/projects/librdata && ./configure"
-        C:\cygwin64\bin\sh -lc "cd /cygdrive/c/projects/librdata && make"
-      }
+  - C:\cygwin64\bin\sh -lc "cd /cygdrive/c/projects/librdata && ./autogen.sh"
+  - C:\cygwin64\bin\sh -lc "cd /cygdrive/c/projects/librdata && ./configure"
+  - C:\cygwin64\bin\sh -lc "cd /cygdrive/c/projects/librdata && make"
 
 test_script:
-  - ps: |
-      if ($env:TOOLCHAIN -eq "msys2")
-      {
-        $env:MSYSTEM="MINGW64"
-        C:\msys64\usr\bin\bash -l -c "cd /c/projects/librdata && make check"
-      }
-      else
-      {
-        C:\cygwin64\bin\sh -lc "cd /cygdrive/c/projects/librdata && make check"
-      }
+  - C:\cygwin64\bin\sh -lc "cd /cygdrive/c/projects/librdata && make check"
 
 on_finish:
-  - ps: |
-      if ($env:TOOLCHAIN -eq "msys2")
-      {
-        C:\msys64\usr\bin\bash -l -c "cd /c/projects/librdata && cat ./test-suite.log"
-      }
-      else
-      {
-        C:\cygwin64\bin\sh -lc "cd /cygdrive/c/projects/librdata && cat ./test-suite.log"
-      }
+  - C:\cygwin64\bin\sh -lc "cd /cygdrive/c/projects/librdata && cat ./test-suite.log"
